infrastructure/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirectscheme
  namespace: traefik
spec:
  redirectScheme:
    permanent: true
    scheme: https
