infrastructure/traefik/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.cap.pernod-ricard.app`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: https-redirectscheme
  tls:
    secretName: nginx-cert-staging
